apps/finance/services/api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: finance
  labels:
    app: api
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: http
      port: 80
      targetPort: http
